Fixes #2665, message icon collapses

--- a/src/definitions/collections/message.less
+++ b/src/definitions/collections/message.less
@@ -219,7 +219,7 @@
 }
 .ui.icon.message > .icon:not(.close) {
   display: block;
-  flex: 0 1 auto;
+  flex: 0 0 auto;
   width: auto;
   line-height: 1;
   vertical-align: @iconVerticalAlign;
